Saved work div in a component & fixed its overflow

--- a/css/style.css
+++ b/css/style.css
@@ -130,6 +130,7 @@ p {
 
 .work {
   position: relative;
+  overflow: hidden;
 }
 
 .work__image-container {
